[bugfix] Fix footer info fields not wrapping (#694)
* flex-wrap footer items

* add testrig instance entry with more info set

--- a/web/source/css/base.css
+++ b/web/source/css/base.css
@@ -251,6 +251,7 @@ footer {
 
 	padding: 2rem;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 
 	div {
